// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ErrorPage /> render matches previous snapshot 1`] = `
<section
  className="error-page"
>
  <div
    className="container"
  >
    <div
      className="col-xs-12 col-md-offset-1 col-md-10 col-lg-offset-1 col-lg-10"
    >
      <div
        className="logo-container"
      >
        <img
          alt="FirstNet Local Control logo"
          src="/images/logo-FirstNet-local-control.svg"
        />
      </div>
      <p
        dangerouslySetInnerHTML={
          Object {
            "__html": "Unfortunately, you do not have permission to view this page. If you think this is in error, please contact your site administrator, or continue to one of the FirstNet Sites below:",
          }
        }
      />
      <nav
        aria-label="FirstNet Sites"
        className="sites-list"
      >
        <ul>
          <li>
            <a
              href="https://test-apps.firstnet.att.com"
            >
              App Catalog
            </a>
          </li>
          <li>
            <a
              href="https://test-appcontrol.firstnet.att.com/"
            >
              App Control
            </a>
          </li>
          <li>
            <a
              href="https://test-localcontrol.firstnet.att.com/"
            >
              Local Control
            </a>
          </li>
        </ul>
      </nav>
      <div
        className="logout-block"
      >
        <hr
          className="or"
        />
        <a
          href="#"
          onClick={[Function]}
        >
          Log Out
        </a>
      </div>
    </div>
  </div>
</section>
`;

exports[`<ErrorPage /> render shows Access Denied for authorization problem 1`] = `
<section
  className="error-page"
>
  <div
    className="container"
  >
    <div
      className="col-xs-12 col-md-offset-1 col-md-10 col-lg-offset-1 col-lg-10"
    >
      <div
        className="logo-container"
      >
        <img
          alt="FirstNet Local Control logo"
          src="/images/logo-FirstNet-local-control.svg"
        />
      </div>
      <p
        dangerouslySetInnerHTML={
          Object {
            "__html": "Unfortunately, you do not have permission to view this page. If you think this is in error, please contact your site administrator, or continue to one of the FirstNet Sites below:",
          }
        }
      />
      <nav
        aria-label="FirstNet Sites"
        className="sites-list"
      >
        <ul>
          <li>
            <a
              href="https://test-apps.firstnet.att.com"
            >
              App Catalog
            </a>
          </li>
          <li>
            <a
              href="https://test-appcontrol.firstnet.att.com/"
            >
              App Control
            </a>
          </li>
          <li>
            <a
              href="https://test-localcontrol.firstnet.att.com/"
            >
              Local Control
            </a>
          </li>
        </ul>
      </nav>
      <div
        className="logout-block"
      >
        <hr
          className="or"
        />
        <a
          href="#"
          onClick={[Function]}
        >
          Log Out
        </a>
      </div>
    </div>
  </div>
</section>
`;

exports[`<ErrorPage /> render shows Access Denied for authorization problem 2`] = `
<section
  className="error-page"
>
  <div
    className="container"
  >
    <div
      className="col-xs-12 col-md-offset-1 col-md-10 col-lg-offset-1 col-lg-10"
    >
      <div
        className="logo-container"
      >
        <img
          alt="FirstNet Local Control logo"
          src="/images/logo-FirstNet-local-control.svg"
        />
      </div>
      <p
        dangerouslySetInnerHTML={
          Object {
            "__html": "Unfortunately, you do not have permission to view this page. If you think this is in error, please contact your site administrator, or continue to one of the FirstNet Sites below:",
          }
        }
      />
      <nav
        aria-label="FirstNet Sites"
        className="sites-list"
      >
        <ul>
          <li>
            <a
              href="https://test-apps.firstnet.att.com"
            >
              App Catalog
            </a>
          </li>
          <li>
            <a
              href="https://test-appcontrol.firstnet.att.com/"
            >
              App Control
            </a>
          </li>
          <li>
            <a
              href="https://test-localcontrol.firstnet.att.com/"
            >
              Local Control
            </a>
          </li>
        </ul>
      </nav>
      <div
        className="logout-block"
      >
        <hr
          className="or"
        />
        <a
          href="#"
          onClick={[Function]}
        >
          Log Out
        </a>
      </div>
    </div>
  </div>
</section>
`;

exports[`<ErrorPage /> render shows App Unavailable on 410 1`] = `
<section
  className="error-page"
>
  <div
    className="container"
  >
    <div
      className="col-xs-12 col-md-offset-1 col-md-10 col-lg-offset-1 col-lg-10"
    >
      <div
        className="logo-container"
      >
        <img
          alt="FirstNet Local Control logo"
          src="/images/logo-FirstNet-local-control.svg"
        />
      </div>
      <p
        dangerouslySetInnerHTML={
          Object {
            "__html": "Unfortunately, you do not have permission to view this page. If you think this is in error, please contact your site administrator, or continue to one of the FirstNet Sites below:",
          }
        }
      />
      <nav
        aria-label="FirstNet Sites"
        className="sites-list"
      >
        <ul>
          <li>
            <a
              href="https://test-apps.firstnet.att.com"
            >
              App Catalog
            </a>
          </li>
          <li>
            <a
              href="https://test-appcontrol.firstnet.att.com/"
            >
              App Control
            </a>
          </li>
          <li>
            <a
              href="https://test-localcontrol.firstnet.att.com/"
            >
              Local Control
            </a>
          </li>
        </ul>
      </nav>
      <div
        className="logout-block"
      >
        <hr
          className="or"
        />
        <a
          href="#"
          onClick={[Function]}
        >
          Log Out
        </a>
      </div>
    </div>
  </div>
</section>
`;

exports[`<ErrorPage /> render shows Generic message otherwise 1`] = `
<section
  className="error-page"
>
  <div
    className="container"
  >
    <div
      className="col-xs-12 col-md-offset-1 col-md-10 col-lg-offset-1 col-lg-10"
    >
      <div
        className="logo-container"
      >
        <img
          alt="FirstNet Local Control logo"
          src="/images/logo-FirstNet-local-control.svg"
        />
      </div>
      <p
        dangerouslySetInnerHTML={
          Object {
            "__html": "Unfortunately, you do not have permission to view this page. If you think this is in error, please contact your site administrator, or continue to one of the FirstNet Sites below:",
          }
        }
      />
      <nav
        aria-label="FirstNet Sites"
        className="sites-list"
      >
        <ul>
          <li>
            <a
              href="https://test-apps.firstnet.att.com"
            >
              App Catalog
            </a>
          </li>
          <li>
            <a
              href="https://test-appcontrol.firstnet.att.com/"
            >
              App Control
            </a>
          </li>
          <li>
            <a
              href="https://test-localcontrol.firstnet.att.com/"
            >
              Local Control
            </a>
          </li>
        </ul>
      </nav>
      <div
        className="logout-block"
      >
        <hr
          className="or"
        />
        <a
          href="#"
          onClick={[Function]}
        >
          Log Out
        </a>
      </div>
    </div>
  </div>
</section>
`;

exports[`<ErrorPage /> render shows Permission Pending 1`] = `
<section
  className="error-page"
>
  <div
    className="container"
  >
    <div
      className="col-xs-12 col-md-offset-1 col-md-10 col-lg-offset-1 col-lg-10"
    >
      <div
        className="logo-container"
      >
        <img
          alt="FirstNet Local Control logo"
          src="/images/logo-FirstNet-local-control.svg"
        />
      </div>
      <p
        dangerouslySetInnerHTML={
          Object {
            "__html": "Unfortunately, you do not have permission to view this page. If you think this is in error, please contact your site administrator, or continue to one of the FirstNet Sites below:",
          }
        }
      />
      <nav
        aria-label="FirstNet Sites"
        className="sites-list"
      >
        <ul>
          <li>
            <a
              href="https://test-apps.firstnet.att.com"
            >
              App Catalog
            </a>
          </li>
          <li>
            <a
              href="https://test-appcontrol.firstnet.att.com/"
            >
              App Control
            </a>
          </li>
          <li>
            <a
              href="https://test-localcontrol.firstnet.att.com/"
            >
              Local Control
            </a>
          </li>
        </ul>
      </nav>
      <div
        className="logout-block"
      >
        <hr
          className="or"
        />
        <a
          href="#"
          onClick={[Function]}
        >
          Log Out
        </a>
      </div>
    </div>
  </div>
</section>
`;

exports[`<ErrorPage /> render shows Service Error for authentication problem 1`] = `
<section
  className="error-page"
>
  <div
    className="container"
  >
    <div
      className="col-xs-12 col-md-offset-1 col-md-10 col-lg-offset-1 col-lg-10"
    >
      <div
        className="logo-container"
      >
        <img
          alt="FirstNet Local Control logo"
          src="/images/logo-FirstNet-local-control.svg"
        />
      </div>
      <p
        dangerouslySetInnerHTML={
          Object {
            "__html": "This page is experiencing an issue. Try again later, or continue to one of the FirstNet Sites below:",
          }
        }
      />
      <nav
        aria-label="FirstNet Sites"
        className="sites-list"
      >
        <ul>
          <li>
            <a
              href="https://test-apps.firstnet.att.com"
            >
              App Catalog
            </a>
          </li>
          <li>
            <a
              href="https://test-appcontrol.firstnet.att.com/"
            >
              App Control
            </a>
          </li>
          <li>
            <a
              href="https://test-localcontrol.firstnet.att.com/"
            >
              Local Control
            </a>
          </li>
        </ul>
      </nav>
    </div>
  </div>
</section>
`;

exports[`<ErrorPage /> render shows Sorry for Page Not Found (404) 1`] = `
<section
  className="error-page"
>
  <div
    className="container"
  >
    <div
      className="col-xs-12 col-md-offset-1 col-md-10 col-lg-offset-1 col-lg-10"
    >
      <div
        className="logo-container"
      >
        <img
          alt="FirstNet Local Control logo"
          src="/images/logo-FirstNet-local-control.svg"
        />
      </div>
      <p
        dangerouslySetInnerHTML={
          Object {
            "__html": "Unfortunately, you do not have permission to view this page. If you think this is in error, please contact your site administrator, or continue to one of the FirstNet Sites below:",
          }
        }
      />
      <nav
        aria-label="FirstNet Sites"
        className="sites-list"
      >
        <ul>
          <li>
            <a
              href="https://test-apps.firstnet.att.com"
            >
              App Catalog
            </a>
          </li>
          <li>
            <a
              href="https://test-appcontrol.firstnet.att.com/"
            >
              App Control
            </a>
          </li>
          <li>
            <a
              href="https://test-localcontrol.firstnet.att.com/"
            >
              Local Control
            </a>
          </li>
        </ul>
      </nav>
      <div
        className="logout-block"
      >
        <hr
          className="or"
        />
        <a
          href="#"
          onClick={[Function]}
        >
          Log Out
        </a>
      </div>
    </div>
  </div>
</section>
`;
